@@ -7,8 +7,8 @@
 \description{Compute \eqn{\theta}{theta}, the potential temperature of
   seawater.}
 
-\usage{sw.theta(salinity, temperature=NULL, pressure=NULL, pref=0,
-         method=c("UNESCO1983","Bryden1973"))}
+\usage{sw.theta(salinity, temperature=NULL, pressure=NULL, reference.pressure=0,
+         method=c("unesco","bryden"))}
 
 \arguments{
   \item{salinity}{either salinity [PSU] (in which case
@@ -18,7 +18,7 @@
     object, and must not be provided in the argument list).}
   \item{temperature}{\emph{in-situ} temperature [\eqn{^\circ}{deg}C]}
   \item{pressure}{pressure [dbar]}
-  \item{pref}{reference pressure [dbar]}
+  \item{reference.pressure}{reference pressure [dbar]}
   \item{method}{algorithm to be used (see details)}
 }
 
@@ -29,18 +29,17 @@
   The potential temperature is defined to be the temperature that a
   water parcel of salinity \code{S}, \emph{in-situ} temperature \code{t}
   and pressure \code{p} would have if were to be moved adiabatically to
-  a location with pressure \code{pref}. This quantity is commonly
-  denoted \eqn{\theta(S,t,p,p_{ref})}{theta(S,t,p,pref)} in the
-  oceanographic literature.
+  a location with pressure \code{reference.pressure}. This quantity is
+  commonly denoted \eqn{\theta}{theta} in the oceanographic literature.
 
-  The \code{"Bryden1973"} method does not use the reference pressure,
-  since it is set up to approximate potential temperature referenced to
-  the surface.
+  The \code{"bryden"} method is based on Bryden (1973), and does not use
+  the reference pressure, since it is set up to approximate potential
+  temperature referenced to the surface.
 
-  For general use, the \code{"UNESCO1983"} method is preferable, since
-  it permits calculation for arbitrary reference pressure. The UNESCO
-  formula is derived from Bryden's earlier method, as Fofonoff \emph{et
-  al.}  (1983) explain.
+  For general use, the \code{"unesco"} method, based on Fofonoff
+  \emph{et al.} (1983), is preferable, since it permits calculation for
+  arbitrary reference pressure. The UNESCO formula is derived from
+  Bryden's earlier method, as Fofonoff \emph{et al.}  (1983) explain.
 
   This is not the place to discuss the two methods in detail, but users
   may note from the example that the two typically yield values that
@@ -57,14 +56,14 @@
 library(oce)
 print(sw.theta(35, 13, 1000)) # 12.858
 
-print(sw.theta(40,40,10000,0,"UNESCO1983")) # 36.89073 (Fofonoff et al., 1983)
+print(sw.theta(40,40,10000,0,"unesco")) # 36.89073 (Fofonoff et al., 1983)
 	
 # Demonstrate that the methods agree to a couple of
 # millidegrees over a typical span of values
 S <- c(30,30,38,38)
 T <- c(-2,-2,30,30)
 p <- rep(1000,4)                                   
-print(max(abs(sw.theta(S,T,p) - sw.theta(S,T,p,0,"UNESCO1983"))))
+print(max(abs(sw.theta(S,T,p) - sw.theta(S,T,p,0,"unesco"))))
 }
 
 \references{Bryden, H. L., 1973. New polynomials for thermal expansion,
