@@ -1,4 +1,6 @@
 0.1-82
+- sw.theta(): rename the method possibilities, to be lower case, without dates
+- in some sw functions, rename 'pref' as 'reference.pressure'
 - read.ctd(): fix bug in getting start.time for some time formats
 - pwelch() added
 - plot.sealevel(): make y axis obey range in data subset, if xlim is given
